--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ regex = "1"
 glob = "0.3.1"
 pest = "2.0"
 pest_derive = "2.0"
+url = "2.3.1"
+time = { version = "0.3.11", features = ["formatting"] }
