Add decorators (WIP)

--- a/posterity.toml
+++ b/posterity.toml
@@ -13,6 +13,9 @@ include = [
 [processor.links]
 target = "https://github.com/Kostassoid/posterity"
 
+[output]
+root = "."
+
 [output.markdown]
 path = "IMPLEMENTATION.md"
 toc = true
