--- a/memorial-cli/Cargo.toml
+++ b/memorial-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "posterity-cli"
+name = "memorial-cli"
 version = "0.1.0"
 edition = "2021"
 
@@ -17,4 +17,4 @@ serde = "1"
 serde_derive = "1"
 derive-getters = "0.2.0"
 strfmt = "0.2.4"
-posterity-macros = { path = "../posterity-macros"}
+memorial-macros = { path = "../memorial-macros" }
