--- a/memorial-core/Cargo.toml
+++ b/memorial-core/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
-name = "memorial-cli"
+name = "memorial-core"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
 regex = "1"
+glob = "0.3.1"
+pest = "2.0"
+pest_derive = "2.0"
+url = "2.3.1"
 time = { version = "0.3.11", features = ["formatting"] }
-toml = "0.7.2"
-clap = "4.1.6"
 serde = "1"
 serde_derive = "1"
-derive-getters = "0.2.0"
 strfmt = "0.2.4"
-memorial-core = { path = "../memorial-core" }
+memorial-macros = { path = "../memorial-macros" }
