--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,7 +17,7 @@ on:
 jobs:
   fmt:
     name: Ensure 'cargo fmt' has been run
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       #      - uses: actions-rs/toolchain@v1
       #        with:
@@ -36,7 +36,7 @@ jobs:
       matrix:
         job:
           - { target: x86_64-pc-windows-gnu       , os: windows-2019 }
-          - { target: x86_64-unknown-linux-musl   , os: ubuntu-20.04 }
+          - { target: x86_64-unknown-linux-musl   , os: ubuntu-22.04 }
           - { target: x86_64-apple-darwin         , os: macos-11 }
           - { target: aarch64-apple-darwin        , os: macos-11     , skip-tests: true }
     steps:
@@ -49,13 +49,19 @@ jobs:
           echo "PROJECT_NAME=memorial-cli" >> $GITHUB_ENV
           echo "PROJECT_VERSION=$(sed -n 's/^version = "\(.*\)"/\1/p' Cargo.toml | head -n1)" >> $GITHUB_ENV
 
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
           target: ${{ matrix.job.target }}
-          override: true
-          profile: minimal # minimal component installation (ie, no documentation)
+
+      - name: Install Cross
+        shell: bash
+        run: |
+          cargo install cross
+          echo "CARGO=cross" >> $GITHUB_ENV
+          echo "TARGET_FLAGS=--target ${{ matrix.job.target }}" >> $GITHUB_ENV
+          echo "TARGET_DIR=./target/${{ matrix.job.target }}" >> $GITHUB_ENV          
 
       - name: Show version information (Rust, cargo)
         shell: bash
@@ -89,26 +95,18 @@ jobs:
 
       - name: Run tests
         if: ${{ !matrix.job.skip-tests }}
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.job.use-cross }}
-          command: test
-          args: --locked --target=${{ matrix.job.target }}
+        run: ${{ env.CARGO }} test --locked ${{ env.TARGET_FLAGS }}
 
       - name: Run app
         if: ${{ !matrix.job.skip-tests }}
-        uses: actions-rs/cargo@v1
-        with:
-          use-cross: ${{ matrix.job.use-cross }}
-          command: run
-          args: --locked --target=${{ matrix.job.target }} -- --help
+        run: ${{ env.CARGO }} run --locked ${{ env.TARGET_FLAGS }} -- --help
 
       - name: Check for release
         id: is-release
         shell: bash
         run: |
           unset IS_RELEASE ; if [[ $GITHUB_REF =~ ^refs/tags/v[0-9].* ]]; then IS_RELEASE='true' ; fi
-          echo ::set-output name=IS_RELEASE::${IS_RELEASE}
+          echo "IS_RELEASE=${IS_RELEASE}" >> "$GITHUB_OUTPUT"
 
       - name: Create tarball
         id: package
@@ -125,7 +123,7 @@ jobs:
           PKG_suffix=".tar.gz" ; case ${{ matrix.job.target }} in *-pc-windows-*) PKG_suffix=".zip" ;; esac;
           PKG_BASENAME=${PROJECT_NAME}-v${PROJECT_VERSION}-${{ matrix.job.target }}
           PKG_NAME=${PKG_BASENAME}${PKG_suffix}
-          echo ::set-output name=PKG_NAME::${PKG_NAME}
+          echo "PKG_NAME=${PKG_NAME}" >> "$GITHUB_OUTPUT"
           
           PKG_STAGING="${{ env.OUTPUT_PATH }}/package"
           ARCHIVE_DIR="${PKG_STAGING}/${PKG_BASENAME}/"
@@ -143,7 +141,7 @@ jobs:
           popd >/dev/null
           
           # Let subsequent steps know where to find the compressed package
-          echo ::set-output name=PKG_PATH::"${PKG_STAGING}/${PKG_NAME}"
+          echo "PKG_PATH=${PKG_STAGING}/${PKG_NAME}" >> "$GITHUB_OUTPUT"
 
       - name: "Artifact upload: tarball"
         uses: actions/upload-artifact@master
