Always push docker image

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -168,6 +168,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: target/release
-          push: ${{ steps.is-release.outputs.IS_RELEASE }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
