Move docker context to root

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -167,7 +167,7 @@ jobs:
         if: ${{ matrix.job.docker-push }}
         uses: docker/build-push-action@v4
         with:
-          context: target/release
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
