--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -172,3 +172,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            TARGET=${{ matrix.job.target }}
