Update cargo release config

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -16,8 +16,8 @@ on:
   workflow_dispatch:
   pull_request:
   push:
-    branches:
-      - master
+#    branches:
+#      - master
     tags:
       - 'v*'
 
