--- a/release.toml
+++ b/release.toml
@@ -1,5 +1,8 @@
-disable-publish = true
-dev-version-ext = "dev"
+allow-branch = ["master"]
+sign-commit = true
+sign-tag = true
+release = true
+publish = false
 pre-release-replacements = [
     {file="README.md", search="v[0-9]+\\.[0-9]+\\.[0-9]+", replace="v{{version}}"},
     {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}", min=0},
