--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -48,7 +48,7 @@ jobs:
         shell: bash
         run: |
           echo "PROJECT_NAME=memorial-cli" >> $GITHUB_ENV
-          echo "PROJECT_VERSION=$(sed -n 's/^version = "\(.*\)"/\1/p' Cargo.toml | head -n1)" >> $GITHUB_ENV
+          echo "PROJECT_VERSION=$(sed -n 's/^version = "\(.*\)"/\1/p' memorial-cli/Cargo.toml | head -n1)" >> $GITHUB_ENV
           echo "TARGET_FLAGS=--target ${{ matrix.job.target }}" >> $GITHUB_ENV
 
       - name: Install Rust
